--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body {
     font-size: 75%;
   }
   @media (max-width: 500px) {
-    font-size: 55%;
+    font-size: 60%;
   }
 }
 body {
